# quad-quad-bot

./: .gitignore  BOM.md  CNAME
.github/workflows/: deploy-docs.yml  ros2-ci.yml  ros2-quality-checks.yml
cad/: Body.SLDASM  Bottom Deck.SLDPRT  Limb.SLDASM
cad/mirrored_components/: Mirror Limb Back-Left.SLDASM  Mirror Limb Back-Right.SLDASM  Mirror Limb Front-Left.SLDASM
cad/mirrored_components/parts/: MirrorFemur.SLDPRT  MirrorFemur1.SLDPRT  MirrorKnee Link Rod.SLDPRT  MirrorKnee Link Tab.SLDPRT  MirrorMirrorFemur.SLDPRT  MirrorMirrorKnee Link Tab.SLDPRT  MirrorMirrorShoulder.SLDPRT  MirrorMirrorTibia.SLDPRT  MirrorShoulder.SLDPRT  MirrorTibia.SLDPRT  MirrorTibia1.SLDPRT
cad/parts/: Bottom Deck.SLDPRT  Femur.SLDPRT  Knee Link Rod.SLDPRT  Knee Link Tab.SLDPRT  Roof.SLDPRT  Shoulder.SLDPRT  Tibia.SLDPRT  Top Deck.SLDPRT
cad/solidworks/assemblies/: Fixed Limb Test.SLDASM  Limb.SLDASM  fixed_limb_test.SLDASM  limb.SLDASM
cad/solidworks/cots/: Battery.SLDPRT  Hobbywing UBEC 25A HV Placeholder.SLDPRT
cad/solidworks/cots/PWM Servo HPS-0618SG/: MirrorMirrorparttruc.SLDPRT  MirrorMirrorservoPWM.SLDPRT  Mirrorparttruc.SLDPRT  Mirrorparttruc1.SLDPRT  MirrorservoPWM.SLDPRT  parttruc.SLDPRT  servoPWM.SLDPRT
cad/solidworks/cots/actuators/HiWonder_HPS-0618SG/: banhlai.SLDPRT  servoPWM.SLDPRT
cad/solidworks/cots/emax-es08mdii-1.snapshot.13/: Servo ES08MDII v2.f3d
cad/solidworks/cots/emax-mt-804-1.snapshot.1/: emax mt 1804.SLDPRT
cad/solidworks/cots/fasteners/: m3-nut-self-locking.ipt  m3-washer.SLDPRT
cad/solidworks/cots/fasteners/Metric_Socket_Cap_Head_Screws/M3/: Screw_DIN_912_M3x10F_A2.SLDPRT  Screw_DIN_912_M3x15F_A2.SLDPRT  Screw_DIN_912_M3x20_A2.SLDPRT  Screw_DIN_912_M3x22_A2.SLDPRT  Screw_DIN_912_M3x25F_A2.SLDPRT  Screw_DIN_912_M3x30_A2.SLDPRT
cad/solidworks/cots/motion/: 3684N11_Corrosion-Resistant Aluminum Gt Timing Belt Pulley.SLDPRT  57155K541_Ball Bearing (1).SLDPRT  SR1038-2RS Bearing.SLDPRT
cad/solidworks/cots/power/: matek_micro_bec.step
cad/solidworks/cots/raspberry-pi-camera-v2-1.snapshot.1/: Raspberry Pi  Camera.SLDPRT
cad/solidworks/cots/speedybee-f405-mini-stack-1.snapshot.2/: SpeedyBee F405 Mini Stack.f3d  SpeedyBee F405 Mini Stack.step  SpeedyBee F405 Mini Stack.stl
cad/solidworks/cots/traxxas-1942-1.snapshot.1/: Traxxas 1942.f3d  Traxxas 1942.step
cad/solidworks/mirrored/: Mirror Limb Back-Left.SLDASM  Mirror Limb Back-Right.SLDASM  Mirror Limb Front-Left.SLDASM
cad/solidworks/mirrored/parts/: MirrorFemur.SLDPRT  MirrorKnee Link Rod.SLDPRT  MirrorKnee Link Rod1.SLDPRT  MirrorKnee Link Tab.SLDPRT  MirrorKnee Link Tab1.SLDPRT  MirrorMirrorFemur.SLDPRT  MirrorMirrorKnee Link Rod.SLDPRT  MirrorMirrorKnee Link Tab.SLDPRT  MirrorMirrorShoulder.SLDPRT  MirrorMirrorTibia.SLDPRT  MirrorShoulder.SLDPRT  MirrorShoulder1.SLDPRT  MirrorTibia.SLDPRT
cad/solidworks/parts/: Femur.SLDPRT  Knee Link Rod.SLDPRT  Knee Link Tab.SLDPRT  Shoulder.SLDPRT  Tibia.SLDPRT  bottom_deck.SLDPRT  casing.SLDPRT  femur.SLDPRT  knee_link_tab.SLDPRT  link_tab.SLDPRT  roof.SLDPRT  shoulder.SLDPRT  shoulder_rotor.SLDPRT  shoulder_stator.SLDPRT  tibia.SLDPRT  top_deck.SLDPRT
cad/urdf_exports/fixed_limb_test/: CMakeLists.txt  package.xml
cad/urdf_exports/fixed_limb_test/config/: joint_names_fixed_limb_test.yaml
cad/urdf_exports/fixed_limb_test/launch/: display.launch  gazebo.launch
cad/urdf_exports/fixed_limb_test/meshes/: base_link.STL  femur_link.STL  rod_link.STL  tibia_link.STL
cad/urdf_exports/fixed_limb_test/urdf/: fixed_limb_test.csv  fixed_limb_test.urdf
docs/: CNAME  index.md  mkdocs.yml  requirements.txt
docs/devlog/: index.md
docs/engineering/: BOM.md  electrical_architecture.MD  index.md
docs/javascripts/: mathjax.js  mermaid-init.js
docs/stylesheets/: logo-tweak.css
electronics/schematics/: main_electronics_scheme.drawio
ros2_ws/: QUALITY_CHECKS.md  pyproject.toml  quality-requirements.txt
ros2_ws/scripts/: README.md  build.sh  clean.sh  publish_limb_targets.md  quality.sh
ros2_ws/src/bot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/bot_bringup/launch/: robot.launch.py
ros2_ws/src/bot_bringup/scripts/: launch_real  launch_sim
ros2_ws/src/bot_command/: CMakeLists.txt  package.xml
ros2_ws/src/bot_command/config/: commander_params.yaml
ros2_ws/src/bot_command/launch/: command.launch.py
ros2_ws/src/bot_command/src/: limb_commander.cpp  locomotion_commander.cpp
ros2_ws/src/bot_control/: CMakeLists.txt  package.xml
ros2_ws/src/bot_control/config/: controllers.yaml  locomotion_params.yaml
ros2_ws/src/bot_control/launch/: locomotion.launch.py
ros2_ws/src/bot_control/src/: limb_commander.cpp  locomotion_commander.cpp  locomotion_planner.cpp
ros2_ws/src/bot_description/: CMakeLists.txt  package.xml
ros2_ws/src/bot_description/config/: joint_limits.yaml
ros2_ws/src/bot_description/launch/: view_robot.launch.py
ros2_ws/src/bot_description/meshes/: body.STL  femur.STL  haa_horn.STL  hfe_horn.STL  hfe_servo.STL  kfe_servo.STL  shoulder_casing.STL  shoulder_link.STL  tab_link.STL  tibia.STL
ros2_ws/src/bot_description/rviz/: robot.rviz
ros2_ws/src/bot_description/urdf/: body.urdf.xacro  bot_body.urdf.xacro  bot_limb.urdf  gazebo.urdf.xacro  limb.urdf.xacro  quad_quad_limb.urdf  quad_quad_limb.urdf.xacro  robot.urdf.xacro  ros2_control.urdf.xacro
ros2_ws/src/bot_gait/: CMakeLists.txt  package.xml
ros2_ws/src/bot_gait/config/: gait_params.yaml
ros2_ws/src/bot_gait/launch/: gait.launch.py
ros2_ws/src/bot_gait/src/: limb_trajectory_generator.cpp
ros2_ws/src/bot_kinematics/: CMakeLists.txt  package.xml
ros2_ws/src/bot_kinematics/include/bot_kinematics/: ik_solver.hpp  types.hpp
ros2_ws/src/bot_kinematics/src/: ik_solver.cpp
ros2_ws/src/bot_math/: CMakeLists.txt  package.xml
ros2_ws/src/bot_math/include/bot_math/: ik_solver.hpp  limb_trajectory.hpp  types.hpp
ros2_ws/src/bot_math/src/: ik_solver.cpp  limb_trajectory.cpp
ros2_ws/src/bot_sim/: CMakeLists.txt  package.xml
ros2_ws/src/bot_sim/launch/: sim.launch.py
