<package format="2">
  <name>fixed_limb_test</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for fixed_limb_test</p>
    <p>This package contains configuration data, 3D models and launch files
for fixed_limb_test robot</p>
  </description>
  <author>Andrii Bessarab</author>
  <maintainer email="contact@andriibessarab.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>