<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bot_command</name>
    <version>0.0.1</version>
    <description>Quad-Quad Bot Command Code</description>
    <maintainer email="contact@andriibessarab.com">Andrii Bessarab</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>control_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>geometry_msgs</depend>

    <depend>bot_kinematics</depend>

    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>