<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bot_control</name>
    <version>0.0.1</version>
    <description>Quad-Quad Bot Control Code</description>
    <maintainer email="contact@andriibessarab.com">Andrii Bessarab</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>gz_ros2_control</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>
    <exec_depend>ros2_control</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>