<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bot_math</name>
    <version>0.0.1</version>
    <description>This package contains the math for robot's locomotion. It includes inverse kinematics and gait planning
        calculations.
    </description>
    <maintainer email="contact@andriibessarab.com">Andrii Bessarab</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>